After 0.9
=========

 * In Plone 2.1 plone_javascripts.js was removed, fixed tests by using
   jstest.js from our own skin.
   [dom]

0.9
===

 * Fixed function of enabled checkbox when adding css/javascript from ZMI.
   Added title field to the 'add stylesheet' part in the ZMI.
   [fschulze]

 * Added migration script for old instances. Just create a external method with
   id 'migrate_resourceregistries', Module Name 'ResourceRegistries.migrate' and
   Function Name 'migrate' and click on the 'Test' tab.
   [fschulze]

 * Cleaned up imports and whitespaces. Code standardization and small
   improvements. Fixed ZMI templates XHTML markup.
   [deo]

 * Refactored the two registries to use one common base class.
   [fschulze]

 * Refactored moving functions, so we have more possibilities. The API reflects
   the IOrderedContainer one.
   [fschulze]

 * Fix order of javascripts, the topmost in the management screen also needs
   to be the topmost in the resulting source.
   [fschulze]

 * Added debugmode where scripts are not concatenated. This will let things
   like the javascript console point to the right line-number. And makes it
   easier to develop, because there is no caching of the scripts.
   [fschulze]

 * Fixed cooking of stylesheets so that composite stylesheets get correct
   media settings. Thanks a lot to Denis Mishunoff[spliter] for discovery,
   investigation and suggested fix
   [elvix]

 * Fixed some security declarations.
   [fschulze]

 * Made moving of stylesheets and javascripts in ZMI possible without javascript
   being enabled in the browser.
   [fschulze]

 * Moved 2.0.5 header.pt to skins/ResourceRegistries_20compatibility and
   remove ResourceRegistries_20compatibility when Plone != 2.0.x
   [fschulze]

 * Check existance of stylesheets and javascripts before registering. This
   fixes reinstallation.
   [fschulze]

 * Removed duplicate getScripts function definition in tools/JSRegistry.py
   [fschulze]
